# ProjectNotePad

./: .gitignore  CMakeLists.txt  README.md
include/: dialog_append_file.hpp  manage_file.hpp  window_main.hpp
source/: dialog_append_file.cpp  main.cpp  manage_file.cpp  window_main.cpp
